@@ -8,4 +8,33 @@ t/10_uescape.t
 t/20_stringcont.t
 t/30_comment.t
 t/40_comma.t
+t/99_regtest.t
 lib/JSON/Relaxed.pm
+t/regtests/site01.json
+t/regtests/site01.rjson
+t/regtests/site02.json
+t/regtests/site02.rjson
+t/regtests/site03.json
+t/regtests/site03.rjson
+t/regtests/site04.json
+t/regtests/site04.rjson
+t/regtests/site05.json
+t/regtests/site05.rjson
+t/regtests/site06.json
+t/regtests/site06.rjson
+t/regtests/site07.json
+t/regtests/site07.rjson
+t/regtests/site08.json
+t/regtests/site08.rjson
+t/regtests/site09.json
+t/regtests/site09.rjson
+t/regtests/site10.json
+t/regtests/site10.rjson
+t/regtests/site11.json
+t/regtests/site11.rjson
+t/regtests/site12.json
+t/regtests/site12.rjson
+t/regtests/strings.json
+t/regtests/strings.rjson
+t/regtests/utf8.json
+t/regtests/utf8.rjson
