@@ -1,0 +1,3 @@
+// Single Quotes
+
+{ 'hello' : 'world' }
