@@ -1,0 +1,1 @@
+["Strings can \nspan multiple lines.","They can either \nsingle, double, or backtick \nquotes."]
