@@ -1,0 +1,19 @@
+[[
+"foo" "bar"
+][
+"foo"
+"bar"
+][
+"foo"\
+"bar"
+][
+"foo" \
+"bar"
+][
+"foo"\
+ "bar"
+][
+"foo" \
+ 'bar' \
+`bleach`
+]]
